@@ -48,23 +48,11 @@ var/root/css/theme-green.css
 var/root/css/theme-navy.css
 var/root/css/theme-red.css
 var/root/docs/app-doh.json
-var/root/docs/de/01_Examples/03_Test.md
 var/root/docs/en/00_Getting_Started.md
 var/root/docs/en/01_Examples/01_GitHub_Flavored_Markdown.md
-var/root/docs/en/01_Examples/02_New_Test.md
-var/root/docs/en/01_Examples/03_Another_Level/01_Another_File.md
-var/root/docs/en/01_Examples/03_Test.md
-var/root/docs/en/01_Examples/04_Testing.md
 var/root/docs/en/01_Examples/05_Code_Highlighting.md
 var/root/docs/en/05_More_Examples/01_Hello_World.md
 var/root/docs/en/index.md
-var/root/docs/en/posts/Blogs/2014-05-03_My_First_Blog_Post.md
-var/root/docs/en/posts/Blogs/2014-05-06_My_Second_Blog_Post.md
-var/root/docs/en/posts/Blogs/2014-05-06_My_Third_Blog_Post.md
-var/root/docs/en/posts/News/2014-05-03_My_First_News_Article.md
-var/root/docs/en/posts/News/2014-05-06_My_Second_News_Article.md
-var/root/docs/en/posts/News/Flash/2014-05-06_My_Fourth_Blog_Post.md
-var/root/docs/en/posts/index.md
 var/root/img/app-editor.png
 var/root/img/app-thumbs.png
 var/root/img/app.png
