@@ -19,7 +19,8 @@
                   </form>
                </div>
 [%    ELSE -%]
-         [% page.content | eval %]
+                  [% page.content | eval %]
+               <p>
 [%       IF page.prev -%]
 [%          uri = uri_for( page.prev.url ); tip = loc( page.prev.title ) -%]
 [%          linkWithTips( uri, 'file', loc( 'Previous' ), 'Hint', tip ) -%]
@@ -28,6 +29,7 @@
 [%          uri = uri_for( page.next.url ); tip = loc( page.next.title ) -%]
 [%          linkWithTips( uri, 'file', loc( 'Next' ), 'Hint', tip ) -%]
 [%       END -%]
+               </p>
 [%    END -%]
             </article>
 [% END -%]
